packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-008.ttrp
// expect: TTRP-PD-008
container c target polars """pandas
x.branch(amount > 0)
"""
